# meurglys3

./: .gitignore  CMakeLists.txt  Cargo.toml  LinkerFlags.txt.in  Makefile.toml  README.md  cmake.env
meurglys3/: Cargo.toml  Makefile.toml
meurglys3/src/: main.rs
meurglys3c/: CMakeLists.txt  Cargo.toml  Makefile.toml  cbindgen.toml
meurglys3c/src/: lib.rs
meurglys3c/tests/: check_parity.c  insert_into_package.c  list_files.c  pack.c  pack_inspect.c  package_methods.c  remove_from_package.c  write_package.c
meurglys3c/tests/test_dir/nested/: index.html
src/: err.rs  lib.rs  package.rs
src/tests/: mod.rs
