workspace = { members = ["meurglys3", "meurglys3c"] }
[package]
name = "meurglys3_lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58" 
bytes = "1.5.0"
path-slash = "0.2.1" 
lazy_static = "1.5.0"
tempdir = "0.3.7"
